Fix icons alignment

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2226,7 +2226,7 @@ input, select, textarea {
 			width: 100%;
 			margin-left: 0;
 			margin-bottom: 0;
-			margin-top: 1.75em;
+			/* margin-top: 1.75em; */
 		}
 
 			ul.actions.special li:first-child {
@@ -2337,7 +2337,7 @@ input, select, textarea {
 
 		ul.icons li {
 			display: inline-block;
-			padding: 0 1em 0 0;
+			/* padding: 0 1em 0 0; */
 		}
 
 			ul.icons li:last-child {
@@ -2349,9 +2349,10 @@ input, select, textarea {
 		}
 
 			ul.icons.major li {
-				padding-right: 3.5em;
-				margin-top: 70px;
-				margin-bottom: 70px;
+				/* padding-right: 3.5em; */
+				/* margin-top: 70px;
+				margin-bottom: 70px; */
+				margin: 4em 2em 4em 2em;
 			}
 
 				@media screen and (max-width: 736px) {
